<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iconTransactionType"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/category_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
             />

        <TextView
            android:id="@+id/textTransactionAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
             />

        <TextView
            android:id="@+id/textTransactionCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/iconTransactionType"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textTransactionAmount" />

        <TextView
            android:id="@+id/textTransactionDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            android:textColor="@color/gray_transaction"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/iconTransactionType"
            app:layout_constraintTop_toBottomOf="@id/textTransactionCategory"
            app:layout_constraintEnd_toStartOf="@id/textTransactionAmount" />

        <TextView
            android:id="@+id/textTransactionDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/gray_transaction"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/iconTransactionType"
            app:layout_constraintTop_toBottomOf="@id/textTransactionDescription"
            app:layout_constraintEnd_toStartOf="@id/textTransactionAmount"
             />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>